# GAPI

./: .gitignore  CMakeLists.txt  Mat.cpp  OBJparsing.h  README.md  SubPixel_buf.cpp  SubPixel_buf.h  TODO  VBHB.cpp  VBHB.h  Vec.cpp  Vec.h  lgapi.cpp  lgapi.h  main.cpp  test  test_main.cpp  win_app.cpp
color/: color.cpp  color.h
doc/: task3.tex
openGL_ref/: lgapi.h  lgapi_ref.cpp
pipeline/: lgapi.cpp  lgapi.h
scene/: scene.cpp
shaders/: shader.h
structs/: Mat.h  VBHB.cpp  VBHB.h  Vec.cpp  Vec.h  structs.h
sw_gapi_task/: CMakeLists.txt  lgapi.cpp  lgapi.h  main.cpp  scene.cpp  scene.h
sw_gapi_task/window/: window.cpp
tests/: draw_polygons.py  test_polygon_intersect.cpp
window/: appWindow.cpp  appWindow.h  window.h
